SKN-30 build user crud endpoints (#10)
* SKN-30 build user crud endpoints

* test command modification
